# RnD-Data-Processing

./: .gitignore  AGENTS.md  README.md  package.json  tsconfig.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: commands.rs  error.rs  lib.rs  main.rs
backend/src/config/: mod.rs  types.rs
backend/src/processing/: compare.rs  discover.rs  excel_write.rs  mod.rs  pipeline.rs  preprocess.rs  preview.rs  segment.rs  setup.rs
backend/tests/: config_load.rs  excel_report.rs  input_parsing.rs  pipeline_system_208v.rs  pipeline_system_415v.rs  preprocess_data.rs  segment_compare.rs
config/: auto-channel-groups.json  tests.registry.json
docs/: COLUMN_MAPPING.md  HANDOFF.md  REQUIREMENTS_NOTES.md  System_208V_Column_Mapping_and_Math.docx  System_208V_Math_Formulas.docx  System_208V_Math_Formulas.html  build-column-mapping-docx.mjs
docs/superpowers/plans/: 2026-07-21-rnd-data-processing-implementation.md
docs/superpowers/specs/: 2026-07-21-rnd-data-processing-design.md  2026-07-22-comparison-gradient-settings-page-design.md
fixtures/: README.md
fixtures/csv/: Acuvim IIR (Acuvim IIR,Meter 10,10).20260721.PhaseAngle.csv  Acuvim IIR (Acuvim IIR,Meter 10,10).20260721.Real-Time.csv  Acuvim IIR (Acuvim IIR,Meter 10,10).20260721.THD.csv  Acuvim IIW (Acuvim IIW,Meter 9,9).20260721.PhaseAngle.csv  Acuvim IIW (Acuvim IIW,Meter 9,9).20260721.Real-Time.csv  Acuvim IIW (Acuvim IIW,Meter 9,9).20260721.THD.csv  Auto_20260721093057.CSV
fixtures/setup/: system_208_targets.json  system_415_targets.json
frontend/: index.html  tsconfig.app.json  tsconfig.node.json  tsconfig.tests.json  vite.config.ts
frontend/src/app/: App.tsx  index.css  main.tsx
frontend/src/features/hub/: HubPage.tsx
frontend/src/features/processor/: ComparisonGradientsPage.tsx  LoadRangeSidebar.tsx  ProcessorPage.tsx  gradientConfig.ts  gradientStorage.ts  testCatalog.ts
frontend/src/features/updates/: UpdateActionButton.tsx  useDesktopUpdates.ts
frontend/src/integrations/tauri/: backend.ts
frontend/tests/: App.test.tsx  ComparisonGradientsPage.test.tsx  ProcessorPage.test.tsx
scripts/: build-signed-installer.ps1  build-unsigned-installer.ps1  check-local-tauri-cli.mjs  check-version-consistency.mjs
(+1 files in other folders)
