[package]
name = "rnd-data-processing"
version = "0.1.0"
description = "RnD Data Processing desktop app"
authors = ["Syed Hassaan Shah"]
license = "MIT"
edition = "2021"

[lib]
name = "rnd_data_processing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rnd-data-processing"
path = "src/main.rs"

[[bin]]
name = "rnd-pipeline"
path = "src/bin/rnd-pipeline.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1"
rayon = "1"
rust_xlsxwriter = "0.96"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
