[package]
name = "rnd-data-processing"
version = "0.1.2"
default-run = "rnd-data-processing"
description = "RnD Data Processing desktop app"
authors = ["Syed Hassaan Shah"]
license = "MIT"
edition = "2021"

[lib]
name = "rnd_data_processing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rnd-data-processing"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "rnd-pipeline"
path = "src/bin/rnd-pipeline.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-updater",
]

[dependencies]
calamine = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1"
rayon = "1"
rust_xlsxwriter = "0.96"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-updater = { version = "2.10.1", optional = true }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
